force-app/main/default/objects/Intelligence__c/Intelligence__c.object-meta.xml
<CustomObject>
    <label>Intelligence</label>
    <nameField>
        <label>Intelligence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intelligence</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>