force-app/main/default/objects/Intelligence__c/fields/Arcana__c.field-meta.xml
<CustomField>
    <fullName>Arcana__c</fullName>
    <label>Arcana</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>