force-app/main/default/objects/Intelligence__c/fields/Investigation__c.field-meta.xml
<CustomField>
    <fullName>Investigation__c</fullName>
    <label>Investigation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>