force-app/main/default/objects/Intelligence__c/fields/Nature__c.field-meta.xml
<CustomField>
    <fullName>Nature__c</fullName>
    <label>Nature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>