force-app/main/default/objects/Intelligence__c/fields/Religion__c.field-meta.xml
<CustomField>
    <fullName>Religion__c</fullName>
    <label>Religion</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>