force-app/main/default/objects/Intelligence__c/fields/Saving_Throws__c.field-meta.xml
<CustomField>
    <fullName>Saving_Throws__c</fullName>
    <label>Saving Throws</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>