force-app/main/default/objects/Intelligence__c/fields/Stat__c.field-meta.xml
<CustomField>
    <fullName>Stat__c</fullName>
    <formula>Arcana__c +  History__c +  Investigation__c +  Nature__c +  Religion__c +  Saving_Throws__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stat</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>